...
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/pokemon_height"
            app:layout_constraintStart_toEndOf="@id/height_pokemon_label"
            app:layout_constraintTop_toBottomOf="@+id/weight_pokemon"/>

        <Button
            android:id="@+id/catch_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_text"
            android:layout_marginTop="@dimen/max_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_pokemon"/>

        <Button
            android:id="@+id/run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_text"
            android:layout_marginTop="@dimen/high_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
