<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:id="@+id/pokemon_list"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_main_data_pokemons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>